...
          floatingActionButton: provider.isLoading ||
                  provider.healthPlans.isEmpty
              ? null
              : FloatingActionButton.extended(
                  onPressed: () => _addPlan(context),
                  icon: const Icon(Icons.add),
                  label: const Text('Adicionar plano'),
                ),
          body: SafeArea(
            child: provider.isLoading
                ? const Center(child: CircularProgressIndicator())
                : _buildList(context, provider),
          ),
...
